@@ -19,7 +19,7 @@ public class P3069 {
             nums1.add(nums[0]);
             nums2.add(nums[1]);
             for (int i = 2; i < nums.length; i++) {
-                if (nums1.getLast() > nums2.getLast()) {
+                if (nums1.get(nums1.size() - 1) > nums2.get(nums2.size() - 1)) {
                     nums1.add(nums[i]);
                 } else {
                     nums2.add(nums[i]);
